all: add snapshot commands
